# neonadeuli-main

./: .gitignore  README.md  docker-compose.yml
app/backend/: .flake8  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/backend/src/main/: main.py
app/backend/src/main/api/: deps.py
app/backend/src/main/api/v1/: api.py
app/backend/src/main/core/: config.py  enum.py  exceptions.py  logging.py
app/backend/src/main/core/auth/: __init__.py  dependencies.py  jwt.py  oauth.py  password.py  token_manager.py
app/backend/src/main/db/: database.py  deps.py
app/backend/src/main/domains/user/: dependencies.py  endpoints.py  repositories.py  services.py
app/backend/src/main/domains/user/auth/: __init__.py  base.py  factory.py
app/backend/src/main/domains/user/auth/providers/: google.py  kakao.py  naver.py
app/backend/src/main/domains/user/models/: user.py
app/backend/src/main/domains/user/repository/: token_repository.py  user_repository.py
app/backend/src/main/domains/user/schemas/: __init__.py  auth.py  request.py  response.py  social_auth.py  user.py
app/backend/src/main/domains/user/schemas/user/: __init__.py  (+4 more)
app/backend/src/main/domains/user/service/: auth_service.py  user_service.py
app/backend/src/main/middleware/: auth.py
app/backend/src/test/: conftest.py
app/backend/src/test/domains/user/: auth_test.py
app/backend/src/test/social-login-test/: package.json
app/backend/src/test/social-login-test/src/: App.js
app/backend/src/test/social-login-test/src/services/: auth.js
(+31 files in other folders)
