[tool.poetry]
name = "너나들이"
packages = [
    { include = "neonadeuli", from = "src" },
version = "0.3.3"
description = "대화형 챗봇 AI와 다양한 콘텐츠로 한국의 국가 유산과 역사를 재미있게 탐구하는 문화 콘텐츠 서비스"
authors = ["정종현 <jjh3543@naver.com>"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.30"
alembic = "^1.8.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dotenv = "^0.21.0"
asyncpg = "^0.29.0"
aiomysql = "^0.2.0"
boto3 = "^1.34.154"
pandas = "^2.2.2"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.0.0"
isort = "^5.13.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
line_length = 120
skip_glob = ["*/migrations/*"]

[tool.mypy]
no_namespace_packages = true
no_strict_optional = true
